changed api docs

--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -20,36 +20,36 @@ head
   meta(property='fb:admins', content='APP_ADMIN')
 
   //bootstrap
-  link(rel="stylesheet", href="css/bootstrap/bootstrap.css")
-  link(rel="stylesheet", href="css/bootstrap/bootstrap-responsive.css")
-  link(rel="stylesheet", href="css/bootstrap/bootstrap-overrides.css")
+  link(rel="stylesheet", href="/css/bootstrap/bootstrap.css")
+  link(rel="stylesheet", href="/css/bootstrap/bootstrap-responsive.css")
+  link(rel="stylesheet", href="/css/bootstrap/bootstrap-overrides.css")
 
   //fonts
-  link(rel="stylesheet", href="css/lib/font-awesome.css")
+  link(rel="stylesheet", href="/css/lib/font-awesome.css")
   //open sans font
   link(rel="stylesheet", href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800')
   //lato font
   link(rel="stylesheet", href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic')
   
   //jquery-ui
-  link(rel="stylesheet", href="css/lib/jquery-ui-1.10.2.custom.css")
+  link(rel="stylesheet", href="/css/lib/jquery-ui-1.10.2.custom.css")
 
   //global styles
   //showcase forms
   //page specific styles
   if(isLoggedIn)
-    link(rel="stylesheet", href="css/compiled/layout.css")
-    link(rel="stylesheet", href="css/compiled/index.css")
-    link(rel="stylesheet", href="css/compiled/form-showcase.css", media="screen")
-    link(rel="stylesheet", href="css/lib/select2.css")
-    link(rel="stylesheet", href='css/compiled/tables.css')
-    link(rel="stylesheet", href='css/compiled/new-user.css')
-    link(rel="stylesheet", href='css/compiled/user-profile.css')
-    link(rel="stylesheet", href='css/compiled/user-list.css')
+    link(rel="stylesheet", href="/css/compiled/layout.css")
+    link(rel="stylesheet", href="/css/compiled/index.css")
+    link(rel="stylesheet", href="/css/compiled/form-showcase.css", media="screen")
+    link(rel="stylesheet", href="/css/lib/select2.css")
+    link(rel="stylesheet", href='/css/compiled/tables.css')
+    link(rel="stylesheet", href='/css/compiled/new-user.css')
+    link(rel="stylesheet", href='/css/compiled/user-profile.css')
+    link(rel="stylesheet", href='/css/compiled/user-list.css')
   else
-    link(rel="stylesheet" href="css/views/home.css")
-  link(rel="stylesheet" href="css/compiled/elements.css")
-  link(rel="stylesheet" href="css/compiled/icons.css")
+    link(rel="stylesheet" href="/css/views/home.css")
+  link(rel="stylesheet" href="/css/compiled/elements.css")
+  link(rel="stylesheet" href="/css/compiled/icons.css")
 
 
   
