--- a/public/css/compiled/user-list.css
+++ b/public/css/compiled/user-list.css
@@ -1,4 +1,6 @@
-
+.users-list .header h3 {
+  margin-top: 0px;
+}
 .users-list .header input.search {
   padding: 5px 6px;
   position: relative;
@@ -14,6 +16,12 @@
 }
 .users-list .header .ui-dropdown {
   margin-left: 20px;
+}
+.users-list .header .ui-dropdown input.form-control {
+  width: 60px;
+  display: inline-block;
+  height: 28px;
+  margin: 0px 8px;
 }
 .users-list .header a.btn-flat span {
   font-size: 17px;
@@ -39,6 +47,17 @@
   font-size: 14px;
   margin: 15px 0 0 0;
 }
+.users-list .table .subtext {
+  font-size: 12px;
+  margin-left: 0;
+  color: #778391;
+  font-style: italic;
+  margin-top: 0;
+}
+.users-list .pagination {
+  margin-top: 25px;
+}
+
 .users-list .table a.name:hover{
   text-decoration: underline;
 }
@@ -48,16 +67,6 @@
   filter:alpha(opacity=100); /* For IE8 and earlier */
 }
 
-.users-list .table .subtext {
-  font-size: 12px;
-  margin-left: 40px;
-  color: #778391;
-  font-style: italic;
-  margin-top: 0;
-}
-.users-list .pagination {
-  margin-top: 25px;
-}
 
 .users-list .table ul.actions {
   margin: 5px 0 0 0;
@@ -101,27 +110,13 @@
   display:inline-block;
 }
 
+
 /* responsive */
-@media (max-width: 1200px) {
-  .users-list .header input.search{
-    margin-left:50px;
-  }
-}
-
-@media (max-width: 900px) {
-  .users-list .header input.search{
-    margin-left:20px;
-  }
-}
-
 @media (max-width: 767px) {
   .ui-dropdown .dialog .body {
     width: 250px;
     left: 58%;
     position: relative;
-  }
-  .users-list .header input.search{
-    margin-left:0;
   }
 
   .users-list .table a.name {
@@ -130,6 +125,9 @@
   .users-list .table td {
     font-size: 12px;
   }
+  .users-list .table .avatar {
+    display: none;
+  }
   .users-list h3 {
     display: block;
     float: none;
@@ -137,7 +135,6 @@
   }
   .users-list .header input.search {
     margin-bottom: 18px;
-
   }
   .users-list .header .ui-dropdown {
     float: left;
@@ -152,4 +149,20 @@
     margin-top: 10px;
     margin-left: 18px;
   }
+  .users-list .header input.search{
+    margin-left:0;
+  }
 }
+/* responsive */
+@media (max-width: 1200px) {
+  .users-list .header input.search{
+    margin-left:50px;
+  }
+}
+
+@media (max-width: 900px) {
+  .users-list .header input.search{
+    margin-left:20px;
+  }
+}
+
