got the home page done

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,7 +1,7 @@
 //want to get rid of this later, but right now required:
 script(type='text/javascript', src="http://code.jquery.com/jquery-latest.js")
 script(type='text/javascript', src="/js/thirdparty/jquery-ui-1.10.2.custom.min.js")
-script(type='text/javascript', src='/js/thirdparty/bootstrap.min.js')<!-- knob -->
+script(type='text/javascript', src='/js/thirdparty/bootstrap.min.js')
 script(type='text/javascript', src="/js/thirdparty/jquery.knob.js")
 script(type='text/javascript', src="/js/thirdparty/jquery.flot.js")
 script(type='text/javascript', src="/js/thirdparty/jquery.flot.stack.js")
@@ -17,7 +17,7 @@ script(type='text/javascript', src='/lib/angular-route/angular-route.js')
 
 //Angular UI
 script(type='text/javascript', src='/lib/angular-bootstrap/ui-bootstrap.js')
-script(type='text/javascript', src='/lib/angular-bootstrap/ui-bootstrap-tpls.js')
+script(type='text/javascript', src='//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js')
 script(type='text/javascript', src='/lib/angular-ui-utils/modules/route/route.js')
 
 //Application Init
@@ -33,7 +33,7 @@ script(type='text/javascript', src='/js/services/modal.js')
 
 //Application Controllers
 script(type='text/javascript', src='/js/controllers/leads.js')
-script(type='text/javascript', src='/js/controllers/index.js')
+script(type='text/javascript', src='/js/controllers/slider.js')
 script(type='text/javascript', src='/js/init.js')
 
 if (process.env.NODE_ENV == 'development')
