--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -20,7 +20,7 @@ head
   meta(property='fb:admins', content='APP_ADMIN')
 
   //bootstrap
-  link(rel="stylesheet", href="/css/bootstrap/bootstrap.css")
+  link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css")
   link(rel="stylesheet", href="/css/bootstrap/bootstrap-overrides.css")
 
   //jquery-ui
@@ -46,13 +46,11 @@ head
     link(rel="stylesheet", href='/css/compiled/new-user.css')
     link(rel="stylesheet", href='/css/compiled/user-profile.css')
     link(rel="stylesheet", href='/css/compiled/user-list.css')
+    link(rel="stylesheet" href="/css/compiled/elements.css")
+    link(rel="stylesheet" href="/css/compiled/icons.css")
   else
     link(rel="stylesheet" href="/css/views/home.css")
-  link(rel="stylesheet" href="/css/compiled/elements.css")
-  link(rel="stylesheet" href="/css/compiled/icons.css")
-
-
-  
+    link(rel="stylesheet" href="/css/compiled/slider.css")
 
   //if lt IE 9
     script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
