--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -1,24 +1,27 @@
 .container
-    .hero-unit
-        h1 Run your entire solar business from anywhere
-        p
-          | SolarMongo's mobile technologies give solar contractors the ability to have all their tools in their hands at all times.
-        p
-          a.btn.btn-primary.btn-large(href='#') Sign Up!
+    div.slidercontainer(ng-controller='sliderController')
+        carousel(interval='myInterval')
+          slide(ng-repeat='slide in slides', active='slide.active')
+            div(ng-include="slide.path")
+            //img(ng-src='{{slide.image}}', style='margin: auto;')
+            .carousel-caption
+              //h4 Slide {{$index}}
+              //p {{slide.text}}
+        
       .row
-        .span4
+        .col-md-4
           h2 Don't get bogged down in operational inefficiency!
           p
             | Reduce your cycle time by at least 30% as well as operational costs through our automated system for tracking paperwork electronically. 
           p
             a.btn(href='#') View a demo »
-        .span4
-          h2 Generate quotes and estimates on the fly!
+        .col-md-4
+          h2 Generate quotes and estimates on the go!
           p
             | Ditch the confusing spreadsheets. Explaining and generating quotes for your potential customers has never been easier.
           p
             a.btn(href='#') Check out a mobile demo »
-        .span4
+        .col-md-4
           h2 Paperless + Mobility
           p
             | With our mobile apps and mobile web technologies, sales and installation in solar has never been more paperless and automated. All your documents are centralized making your solar business workflow easier than ever
