--- a/public/views/navigation/navlist.html
+++ b/public/views/navigation/navlist.html
@@ -1,42 +1,69 @@
 <!-- navbar not authenticated -->
-<div class="navbar navbar-inverse navbar-fixed-top" data-ng-hide="global.authenticated">
-      <div class="navbar-inner">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" data-ng-hide="global.authenticated">
         <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="/">SolarMongo</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Product <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Features Overview</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li class="divider"></li>
-                        <li class="nav-header">Stories</li>
-                        <li><a href="#">testimonials</a></li>
-                    </ul>
-                </li>
-                <li data-ng-repeat="item in menu" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
-                    <a href="{{item.link}}">{{item.title}}</a>
-                </li>
-                <li>
-                    <a href="/signup">Sign Up</a>
-                </li>
-            </ul>
-            <form action="/users/session" method="post" class="navbar-form pull-right signin form-horizontal ng-pristine ng-valid">
-              <input class="span2" type="text" name="email" placeholder="Email">
-              <input class="span2" type="password" name="password" placeholder="Password">
-              <button type="submit" class="btn">Sign in</button>
-            </form>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">SolarMongo</a>    
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav pull-left hidden-xs">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle hidden-xs hidden-sm" data-toggle="dropdown">
+                            Product
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Features Overview</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Stories</li>
+                            <li><a href="#">testimonials</a></li>
+                        </ul>
+                    </li>
+                    <li data-ng-repeat="item in menu" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
+                        <a href="{{item.link}}">{{item.title}}</a>
+                    </li>
+                    <li>
+                        <a href="/signup">Sign Up</a>
+                    </li>
+                </ul>
+               <!-- <ul class="nav navbar-nav pull-left hidden-xs">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Product <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Features Overview</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li class="divider"></li>
+                            <li class="nav-header">Stories</li>
+                            <li><a href="#">testimonials</a></li>
+                        </ul>
+                    </li>
+                    <li data-ng-repeat="item in menu" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
+                        <a href="{{item.link}}">{{item.title}}</a>
+                    </li>
+                    <li>
+                        <a href="/signup">Sign Up</a>
+                    </li>
+                </ul>-->
+                <form action="/users/session" method="post" class="navbar-form navbar-right ng-pristine ng-valid" role="form">
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="email" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="password" name="password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-success">Sign in</button>
+                </form>
+            </div><!--/.nav-collapse -->
+            </div>
+            </div>
 <!-- end navbar not authenticated -->
 
 <!-- navbar is authenticated-->
