some more updates, getting closer to being done

--- a/public/css/bootstrap/bootstrap-overrides.css
+++ b/public/css/bootstrap/bootstrap-overrides.css
@@ -219,7 +219,7 @@ textarea::-webkit-input-placeholder {
 }
 /* menu toggler */
 .navbar-inverse .navbar-toggle {
-	float: left;
+	float: right;
 	margin-top: 10px;
 	margin-left: 15px;
 }
