--- a/public/views/starter_templates/signin.html
+++ b/public/views/starter_templates/signin.html
@@ -7,7 +7,6 @@
 	
     <!-- bootstrap -->
     <link href="css/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-responsive.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap-overrides.css" type="text/css" rel="stylesheet" />
 
     <!-- global styles -->
@@ -35,40 +34,40 @@
     <div class="bg-switch visible-desktop">
         <div class="bgs">
             <a href="#" data-img="landscape.jpg" class="bg active">
-                <img src="img/bgs/landscape.jpg" />
+                <img src="img/bgs/landscape.jpg" alt="background" />
             </a>
             <a href="#" data-img="blueish.jpg" class="bg">
-                <img src="img/bgs/blueish.jpg" />
+                <img src="img/bgs/blueish.jpg" alt="background" />
             </a>            
             <a href="#" data-img="7.jpg" class="bg">
-                <img src="img/bgs/7.jpg" />
+                <img src="img/bgs/7.jpg" alt="background" />
             </a>
             <a href="#" data-img="8.jpg" class="bg">
-                <img src="img/bgs/8.jpg" />
+                <img src="img/bgs/8.jpg" alt="background" />
             </a>
             <a href="#" data-img="9.jpg" class="bg">
-                <img src="img/bgs/9.jpg" />
+                <img src="img/bgs/9.jpg" alt="background" />
             </a>
             <a href="#" data-img="10.jpg" class="bg">
-                <img src="img/bgs/10.jpg" />
+                <img src="img/bgs/10.jpg" alt="background" />
             </a>
             <a href="#" data-img="11.jpg" class="bg">
-                <img src="img/bgs/11.jpg" />
+                <img src="img/bgs/11.jpg" alt="background" />
             </a>
         </div>
     </div>
 
 
-    <div class="row-fluid login-wrapper">
+    <div class="login-wrapper">
         <a href="index.html">
-            <img class="logo" src="img/logo-white.png">
+            <img class="logo" src="img/logo-white.png" alt="logo" />
         </a>
 
-        <div class="span4 box">
+        <div class="box">
             <div class="content-wrap">
                 <h6>Log in</h6>
-                <input class="span12" type="text" placeholder="E-mail address">
-                <input class="span12" type="password" placeholder="Your password">
+                <input class="form-control" type="text" placeholder="E-mail address">
+                <input class="form-control" type="password" placeholder="Your password">
                 <a href="#" class="forgot">Forgot password?</a>
                 <div class="remember">
                     <input id="remember-me" type="checkbox">
@@ -78,7 +77,7 @@
             </div>
         </div>
 
-        <div class="span4 no-account">
+        <div class="no-account">
             <p>Don't have an account?</p>
             <a href="signup.html">Sign up</a>
         </div>
