--- a/public/views/starter_templates/signup.html
+++ b/public/views/starter_templates/signup.html
@@ -31,23 +31,23 @@
 <body>
     <div class="header">
         <a href="index.html">
-            <img src="img/logo.png" class="logo" />
+            <img src="img/logo.png" class="logo" alt="logo" />
         </a>
     </div>
-    <div class="row-fluid login-wrapper">
+    <div class="login-wrapper">
         <div class="box">
             <div class="content-wrap">
                 <h6>Sign Up</h6>
-                <input class="span12" type="text" placeholder="E-mail address">
-                <input class="span12" type="password" placeholder="Password">
-                <input class="span12" type="password" placeholder="Confirm Password">
+                <input class="form-control" type="text" placeholder="E-mail address">
+                <input class="form-control" type="password" placeholder="Password">
+                <input class="form-control" type="password" placeholder="Confirm Password">
                 <div class="action">
                     <a class="btn-glow primary signup" href="index.html">Sign up</a>
                 </div>                
             </div>
         </div>
 
-        <div class="span4 already">
+        <div class="already">
             <p>Already have an account?</p>
             <a href="signin.html">Sign in</a>
         </div>
