bootstrap changes not ready

--- a/app/views/pages/api.jade
+++ b/app/views/pages/api.jade
@@ -6,7 +6,7 @@ block content
 			h1 Api Implementation
 			h3 Getting a token
 			p
-				| REQUEST TOKEN (POST) - requires: email, password - returns the token that is user specific. Will require email and password as parameters.
+				| REQUEST TOKEN (POST): /token - requires: email, password - returns the token that is user specific. Will require email and password as parameters.
 			p
 
 			h3 Auth
