--- a/public/views/navigation/navlist.html
+++ b/public/views/navigation/navlist.html
@@ -207,11 +207,12 @@
     </div>
 </header>
 <!-- end navbar -->
-
+{{isCollapsed}}
+<button ng-click="isCollapsed = !isCollapsed">collapse me</button>
 <!-- sidebar -->
 <div id="sidebar-nav" ng-class="{display:isCollapsed}" data-ng-show="global.authenticated">
     <ul id="dashboard-menu">
-        <li ng-class="{active:isActive(list.route)}" ng-repeat="list in navList">
+        <li ng-click="alert('yo')" ng-class="{active:isActive(list.route)}" ng-repeat="list in navList">
             <div class="pointer" ng-class="{hide:!isActive(list.route)}">
                 <div class="arrow"></div>
                 <div class="arrow_border"></div>
