--- a/public/views/leads/list.html
+++ b/public/views/leads/list.html
@@ -1,18 +1,18 @@
 <div id="pad-wrapper" class="users-list" data-ng-controller="LeadsController" data-ng-init="find()">
-    <div class="row-fluid header">
-        <div class="span12 pull-right">
-            <h3>Leads</h3>
-            <input data-ng-model="query" type="text" class="span5 search" placeholder="Type a lead's name...">
+    <div class="row header">
+        <h3>Leads</h3>
+        <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
+            <input class="col-md-4 search" data-ng-model="query" type="text" placeholder="Type a lead's name...">
             
             <!-- custom popup filter -->
             <!-- styles are located in css/elements.css -->
             <!-- script that enables this dropdown is located in js/theme.js -->
             <div class="ui-dropdown">
-                <div class="head" data-toggle="tooltip" title="" data-original-title="Click me!">
-                    Filter leads
+                <div data-original-title="Click me!" class="head" data-toggle="tooltip" title="">
+                    Filter users
                     <i class="arrow-down"></i>
                 </div>  
-                <div class="dialog" style="display: none;">
+                <div style="display: none;" class="dialog">
                     <div class="pointer">
                         <div class="arrow"></div>
                         <div class="arrow_border"></div>
@@ -36,7 +36,7 @@
                                 <option>starts with</option>
                                 <option>contains</option>
                             </select>
-                            <input type="text">
+                            <input class="form-control" type="text">
                             <a class="btn-flat small">Add filter</a>
                         </div>
                     </div>
