--- a/public/views/leads/view/view.html
+++ b/public/views/leads/view/view.html
@@ -1,7 +1,7 @@
 <div id="pad-wrapper" class="user-profile" data-ng-controller="LeadsController" data-ng-init="findOne()">
     <!-- header -->
-    <div class="row-fluid header">
-        <div class="span8">
+    <div class="row header">
+        <div class="col-md-8">
             <!--<img src="img/contact-profile.png" class="avatar img-circle">-->
             <h1 class="main-title"><i class="icon-book table-icon"></i><span>{{lead.firstName}} {{lead.lastName}}</span></h1>
         </div>
