--- a/public/css/compiled/user-list.css
+++ b/public/css/compiled/user-list.css
@@ -32,6 +32,8 @@
 .users-list .table td {
   vertical-align: middle;
   font-size: 13px;
+  padding-top:20px;
+  padding-bottom:20px;
 }
 .users-list .table img.avatar {
   float: left;
@@ -45,7 +47,6 @@
   display: block;
   font-weight: 600;
   font-size: 14px;
-  margin: 15px 0 0 0;
 }
 .users-list .table .subtext {
   font-size: 12px;
