--- a/public/views/leads/list.html
+++ b/public/views/leads/list.html
@@ -43,65 +43,62 @@
                 </div>
             </div>
 
-            <a href="#!/leads/create" class="btn-flat success pull-right">
+            <a href="#!/leads/create" class="btn btn-success pull-right">
                 <span>+</span>
                 Lead
             </a>
         </div>
     </div>
-        <!-- Users table -->
-        <div class="row-fluid table">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th class="span4 sortable">
-                            Name
-                        </th>
-                        <th class="span3 sortable">
-                            <span class="line"></span>City, State
-                        </th>
-                        <th class="span2 sortable">
-                            <span class="line"></span>Email
-                        </th>
-                        <th class="span3 sortable align-right">
-                            <span class="line"></span>Actions
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                <!-- row -->
-                <tr data-ng-repeat="lead in leads | filter:query" ng-class="{first: $first}">
-                    <td>
-                        <!--<img src="img/contact-img.png" class="img-circle avatar hidden-phone">-->
-                        <a href="#!/leads/{{lead._id}}" class="name"><i class="icon-book table-icon"></i>{{lead.firstName}} {{lead.lastName}}</a>
-                        <span class="subtext">{{lead.companyName}}</span>
-                    </td>
-                    <td>
-                        {{lead.city | placeholder}}, {{lead.state | placeholder}}
-                    </td>
-                    <td>
-                        {{lead.email}}
-                    </td>
-                    <td class="align-right">
-                        <ul class="actions">
-                            <li class="last"><i class="table-delete" data-ng-click="remove(lead);"></i></li>
-                        </ul>
-                    </td>
+    <!-- Users table -->
+    <div class="row col-md-12">
+        <table class="table table-hover">
+            <thead> 
+                <tr>
+                    <th class="span4 sortable">
+                        Name
+                    </th>
+                    <th class="span3 sortable">
+                        <span class="line"></span>City, State
+                    </th>
+                    <th class="span2 sortable">
+                        <span class="line"></span>Email
+                    </th>
+                    <th class="span3 sortable align-right">
+                        <span class="line"></span>Actions
+                    </th>
                 </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="pagination pull-right">
-            <ul>
-                <li><a href="#">‹</a></li>
-                <li><a class="active" href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">›</a></li>
-            </ul>
-        </div>
+            </thead>
+            <tbody>
+            <!-- row -->
+            <tr data-ng-repeat="lead in leads | filter:query" ng-class="{first: $first}">
+                <td>
+                    <!--<img src="img/contact-img.png" class="img-circle avatar hidden-phone">-->
+                    <a href="#!/leads/{{lead._id}}" class="name"><i class="icon-book table-icon"></i>{{lead.firstName}} {{lead.lastName}}</a>
+                    <span class="subtext">{{lead.companyName}}</span>
+                </td>
+                <td>
+                    {{lead.city | placeholder}}, {{lead.state | placeholder}}
+                </td>
+                <td>
+                    {{lead.email}}
+                </td>
+                <td class="align-right">
+                    <ul class="actions">
+                        <li class="last"><i class="table-delete" data-ng-click="remove(lead);"></i></li>
+                    </ul>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+        <ul class="pagination">
+            <li><a href="#">«</a></li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">»</a></li>
+        </ul>
     <!-- end users table -->
     <!-- end side-bar with span9 -->
     <!--<div class="span3 form-sidebar pull-left">
