--- a/public/views/leads/view/general.html
+++ b/public/views/leads/view/general.html
@@ -1,34 +1,60 @@
-<div class="new-user" data-ng-controller="LeadsController" data-ng-init="findOne()">
-    <div class="row-fluid header">
-        <div class="row-fluid form-wrapper">
-            <div class="span9 with-sidebar">
-                <form class="new_user_form" data-ng-submit="update()">
-                    <div class="span12 field-box">
+<div data-ng-controller="LeadsController" data-ng-init="findOne()">
+    <div class="row header">
+        <div class="row form-wrapper">
+            <div class="col-md-9 with-sidebar">
+                <form class="form-horizontal" role="form" data-ng-submit="update()">
+                    <!--<div class="col-md-12 field-box">
                         <h3>General</h3>
-                    </div>
-                    <div class="span12 field-box">
+                    </div>-->
+                    <!--<div class="col-md-12 field-box">
                         <label>Name:</label>
-                        <input type="text" data-ng-model="lead.firstName" placeholder="First Name" class="span12 small-inline" maxlength="30" required>
-                        <input type="text" data-ng-model="lead.lastName" placeholder="Last Name" class="span12 small-inline last" maxlength="30" required>
+                        <input type="text" data-ng-model="lead.firstName" placeholder="First Name" class="form-control col-md-12 small-inline" maxlength="30" required>
+                        <input type="text" data-ng-model="lead.lastName" placeholder="Last Name" class="form-control col-md-12 small-inline last" maxlength="30" required>
+                    </div>-->
+                    <br>
+                    <div class="form-group">
+                        <div class="col-md-8">
+                            <h3>General</h3>
+                        </div>
                     </div>
-                    <div class="span12 field-box">
-                        <label>Company:</label>
-                        <input class="span9" type="text" name="companyName" data-ng-model="lead.companyName" placeholder="Company Name"/>
+                    <div class="form-group">
+                        <label class="col-md-2 control-label">Name:</label>
+                        <div class="col-md-10">
+                            <div class="form-inline">
+                                <div class="form-group">
+                                    <input type="text" data-ng-model="lead.firstName" placeholder="First Name" class="form-control col-md-12 small-inline" maxlength="30" required>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" data-ng-model="lead.lastName" placeholder="Last Name" class="form-control col-md-12 small-inline last" maxlength="30" required>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="span12 field-box">
-                        <label>Title:</label>
-                        <input class="span9" type="text" name="title" placeholder="Professional Career Title" data-ng-model="lead.title"/>
+                    <div class="form-group">
+                        <label class="col-md-2 control-label">Company:</label>
+                        <div class="col-md-8">
+                            <input class="form-control" type="text" name="companyName" data-ng-model="lead.companyName" placeholder="Company Name"/>
+                        </div>
                     </div>
-                    <div class="span12 field-box">
-                        <label>Email:</label>
-                        <input type="text" class="span9" data-ng-model="lead.email" placeholder="example@example.com">
+                    <div class="form-group">
+                        <label class="col-md-2 control-label">Title:</label>
+                        <div class="col-md-8">
+                            <input class="form-control" type="text" name="title"data-ng-model="lead.title" placeholder="Professional Career Title"/>
+                        </div>
                     </div>
-                     <div class="span12 field-box">
+                    <div class="form-group">
+                        <label class="col-md-2 control-label">Email:</label>
+                        <div class="col-md-8">
+                            <input class="form-control" type="text" data-ng-model="lead.email" placeholder="example@example.com">
+                        </div>
+                    </div>
+                    
+                     <div class="col-md-12 field-box">
                         <label>Phone:</label>
                         <input type="text" data-ng-model="lead.phoneWork" placeholder="Work Phone" class="span12 small-inline" maxlength="30">
                         <input type="text" data-ng-model="lead.phoneMobile" placeholder="Mobile Phone" class="span12 small-inline last" maxlength="30">
                     </div>
-                    <div class="span12 field-box">
+                    <div class="col-md-12 field-box">
                         <label>Address:</label>
                         <div class="address-fields">
                             <input type="text" placeholder="Street address" class="span12" data-ng-model="lead.address">
@@ -121,7 +147,7 @@
                     <li><a href="#">Import from a CSV file</a></li>
                     <li><a href="#">Import from an Excel file</a></li>
                 </ul>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
