putting server back to normal, more css changes from bootstrap 3.0

--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -48,6 +48,7 @@ head
     link(rel="stylesheet", href='/css/compiled/user-list.css')
     link(rel="stylesheet" href="/css/compiled/elements.css")
     link(rel="stylesheet" href="/css/compiled/icons.css")
+    link(rel="stylesheet" href="/css/compiled/leads.css")
   else
     link(rel="stylesheet" href="/css/views/home.css")
     link(rel="stylesheet" href="/css/compiled/slider.css")
