--- a/public/views/navigation/navlist.html
+++ b/public/views/navigation/navlist.html
@@ -56,11 +56,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png" alt="logo" />
-            </a>
+            <a class="navbar-brand" href="index.html">SolarMongo</a>
         </div>
-        {{isCollapsed}}
         <ul class="nav navbar-nav pull-right hidden-xs">
             <li class="hidden-xs hidden-sm">
                 <input class="search" type="text" />
