--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,5 +1,5 @@
 //want to get rid of this later, but right now required:
-script(type='text/javascript', src="http://code.jquery.com/jquery-latest.js")
+script(type='text/javascript', src="/lib/jquery/jquery.min.js")
 script(type='text/javascript', src="/js/thirdparty/jquery-ui-1.10.2.custom.min.js")
 script(type='text/javascript', src='/js/thirdparty/bootstrap.min.js')
 script(type='text/javascript', src="/js/thirdparty/jquery.knob.js")
