--- a/public/css/compiled/elements.css
+++ b/public/css/compiled/elements.css
@@ -380,7 +380,6 @@
 
 /* Custom Select */
 .ui-select {
-  width: 137px;
   margin-left: 0px !important;
   vertical-align: middle;
   min-width: 100px;
@@ -401,19 +400,24 @@
   border-radius: 5px;
   background-position: 94%;
   background-repeat: no-repeat;
+  outline: 0;
 }
 .ui-select select {
+  outline: 0;
   line-height: inherit;
   width: 135%;
   font-family: "Open Sans", Arial;
   font-size: 12px;
   border: none;
   padding: 1px 30px 0px 7px;
-  height: 21px;
+  height: 30px;
   -webkit-appearance: none;
   color: #737f8d;
   text-shadow: 1px 1px 1px #fff;
   background: transparent;
+}
+.ui-select select option{
+  outline:0;
 }
 
 /* jQuery UI Slider overrides */
